<resources>
    <string name="app_name">Forca</string>

    <string name="label_play">Jogar</string>
    <string name="label_add_words">Adcionar Palavras</string>
    <string name="label_menu_restart_game">Reiniciar jogo</string>
    <string name="label_menu_new_game">Novo jogo</string>
    <string name="label_menu_exit_game">Sair do jogo</string>
    <string name="label_add_word">Adicionar palavra</string>

    <string name="title_register">Bem-vindo(a) ao \n<b>Jogo da Forca</b></string>
    <string name="title_add_new_words">É só adicionar <b>palavras novas</b></string>
    <string name="title_hello_user">Olá %s, escolha uma letra e vamos começar</string>

    <string name="hint_nickname">Nickname</string>
    <string name="hint_new_word">Nova palavra</string>

    <string name="description_user_avatar">usuário avatar</string>

    <string name="placeholder_enter_new_word">Entre com seu nickname</string>

    <string name="error_empty_nickname">O nickname não pode ser vazio</string>
    <string name="error_empty_word">Por favor ensira um palavra</string>
    <string name="error_letter_played">Você já jogou essa letra</string>

    <string name="success_word_added">Palavra adicionada com sucesso</string>

    <string name="dialog_title_lose_game">Perdeu 😢</string>
    <string name="dialog_message_lose_game_hanged">Você errou de mais e foi enforcado 😱, mais sorte na próxima ⏭</string>
    <string name="dialog_message_lose_game_time_end">Lento de mais 😴, o tempo acabou e você perdeu ⌛, tente ser mais rápido na próxima 🏃‍</string>
    <string name="dialog_title_win_game">Vitória 😢</string>
    <string name="dialog_title_new_game">Iniciar novo jogo 🐣</string>
    <string name="dialog_title_restart_game">Reiniciando jogo 🐣</string>
    <string name="dialog_title_exit_game">Saindo 🏃‍♀</string>
    <string name="dialog_message_new_game">Você perdera todo o progresso</string>
    <string name="dialog_message_win_game">Parabés 👏, você é um(a) gênio e obteve a vitória🎉🎂</string>
    <string name="dialog_label_primary">Jogar novamente</string>
    <string name="dialog_label_continue">Continuar</string>
    <string name="dialog_label_cancel">Cancelar</string>
    <string name="dialog_label_secondary">Sair</string>

    <string name="notification_title">O tempo está correndo ⏳</string>

    <string name="template_timer">%02d:%02d</string>
    <string name="channel_name">DEFAULT_CHANEL</string>
    <string name="channel_description">default notification chanel</string>
</resources>